Added healthcare agents

--- a/scratch/hackathon_agent.ipynb
+++ b/scratch/hackathon_agent.ipynb
@@ -35,57 +35,109 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
+    "\n",
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_databricks import ChatDatabricks\n",
     "from databricks.sdk import WorkspaceClient\n",
-    "import os\n",
+    "from langchain_core.runnables import Runnable, RunnableSequence, RunnableLambda\n",
+    "\n",
     "\n",
     "# configure workspace tokens\n",
     "w = WorkspaceClient()\n",
     "os.environ[\"DATABRICKS_HOST\"] = w.config.host\n",
     "os.environ[\"DATABRICKS_TOKEN\"] = w.tokens.create(comment=\"for model serving\", lifetime_seconds=1200).token_value\n",
     "\n",
-    "llm = ChatDatabricks(endpoint=\"databricks-llama-4-maverick\")\n",
+    "llm = ChatDatabricks(endpoint=\"databricks-meta-llama-3-1-405b-instruct\")\n",
     "\n",
     "def format_context(df: pd.DataFrame) -> str:\n",
     "    return df.to_json(orient='records', indent=2)\n",
     "\n",
-    "def find_plans(location: str) -> pd.DataFrame:\n",
+    "def find_info(location: str) -> pd.DataFrame:\n",
     "  query = f\"\"\"\n",
     "    SELECT\n",
-    "      *    \n",
-    "    FROM `dais-hackathon-2025`.mimilabs.landscape_special_needs_plan\n",
-    "    WHERE\n",
-    "      county ILIKE '%{location}%'      \n",
-    "    LIMIT 5\n",
+    "  specialty_diseases,\n",
+    "  states,\n",
+    "  legal_entity_city,\n",
+    "  extract(year from `dais-hackathon-2025`.mimilabs.cpsc_combined.contract_effective_date) as year,\n",
+    "  extract(month from `dais-hackathon-2025`.mimilabs.cpsc_combined.contract_effective_date) as month,\n",
+    "  count(distinct `dais-hackathon-2025`.mimilabs.snpdata.plan_id) as distinct_plans,\n",
+    "  count( `dais-hackathon-2025`.mimilabs.snpdata.contract_number) as distinct_contracts,\n",
+    "  count( `dais-hackathon-2025`.mimilabs.snpdata.plan_enrollment) as distinct_enrollments\n",
+    "FROM\n",
+    "  `dais-hackathon-2025`.mimilabs.snpdata\n",
+    "  inner join\n",
+    "  `dais-hackathon-2025`.mimilabs.mapd_plan_directory\n",
+    "  on\n",
+    "  `dais-hackathon-2025`.mimilabs.snpdata.plan_type = `dais-hackathon-2025`.mimilabs.mapd_plan_directory.plan_type\n",
+    "AND\n",
+    "  `dais-hackathon-2025`.mimilabs.snpdata.contract_number = `dais-hackathon-2025`.mimilabs.mapd_plan_directory.contract_number\n",
+    "  inner join\n",
+    "  `dais-hackathon-2025`.mimilabs.cpsc_combined\n",
+    "  on\n",
+    "  `dais-hackathon-2025`.mimilabs.snpdata.contract_number = `dais-hackathon-2025`.mimilabs.cpsc_combined.contract_id\n",
+    "  and\n",
+    "  `dais-hackathon-2025`.mimilabs.snpdata.plan_id = `dais-hackathon-2025`.mimilabs.cpsc_combined.plan_id\n",
+    "GROUP BY\n",
+    "    specialty_diseases,\n",
+    "    states,\n",
+    "    legal_entity_city,\n",
+    "    year,\n",
+    "    month\n",
+    "\n",
     "  \"\"\"\n",
     "  return format_context(spark.sql(query).toPandas())\n",
+    "  \n",
     "\n",
-    "# Define the prompt template for the LLM\n",
-    "prompt_template = PromptTemplate.from_template(\n",
+    "# === Agent A: ExtractionAgent ===\n",
+    "extraction_prompt = PromptTemplate.from_template(\n",
     "  \"\"\"\n",
-    "  You are a helpful healthcare assistant identifying what plans are available in my county.\n",
+    "  You are a helpful healthcare assistant identifying what plans are available in my county. Categorise the speciality diseases into cardio, renal, mental, diabetic. One speciality disease can be mapped to multiple categories. Each speciality disease we map to at least one category. Return for each speciality disease the categories. Return just the list, not an explanation or summary.\n",
     "\n",
     "  Here is the JSON data:\n",
     "  {context}\n",
     "  \"\"\"\n",
     ")\n",
     "\n",
-    "llm = ChatDatabricks(endpoint=\"databricks-llama-4-maverick\")\n",
-    "\n",
-    "# This is our simple \"agentic\" chain\n",
-    "chain = (\n",
-    "    find_plans\n",
-    "    | prompt_template\n",
+    "extraction_chain = (\n",
+    "    find_info |\n",
+    "    extraction_prompt\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "# Let's run the chain for Chicago!\n",
-    "result = chain.invoke(\"Autauga\")\n",
+    "def get_summary(location: str) -> pd.DataFrame:\n",
+    "  query = f\"\"\"\n",
+    "  \n",
+    "  \"\"\"\n",
+    "  return format_context(spark.sql(query).toPandas())\n",
     "\n",
+    "# === Agent B: SummaryAgent ===\n",
+    "summary_prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
+    "    Based on the extracted categories return how many cardio categories we have.\n",
+    "\n",
+    "    Extracted Info:\n",
+    "    {extracted_info}\n",
+    "    \"\"\"\n",
+    ")\n",
+    "summary_chain = (\n",
+    "    summary_prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "# === Agentic Chain ===\n",
+    "agentic_chain = (\n",
+    "    extraction_chain \n",
+    "    | summary_chain | (lambda extracted: {\"extracted_info\": extracted}) \n",
+    "    | summary_chain\n",
+    ")\n",
+    "\n",
+    "# Run the agentic chain\n",
+    "result = agentic_chain.invoke(\"Autauga\")\n",
     "print(result)"
    ]
   }
