Updated using two agents

--- a/scratch/hackathon_agent.ipynb
+++ b/scratch/hackathon_agent.ipynb
@@ -55,35 +55,33 @@
     "def format_context(df: pd.DataFrame) -> str:\n",
     "    return df.to_json(orient='records', indent=2)\n",
     "\n",
-    "def find_info(location: str) -> pd.DataFrame:\n",
+    "def find_info() -> pd.DataFrame:\n",
     "  query = f\"\"\"\n",
     "    SELECT\n",
     "  specialty_diseases,\n",
     "  states,\n",
-    "  legal_entity_city,\n",
-    "  extract(year from `dais-hackathon-2025`.mimilabs.cpsc_combined.contract_effective_date) as year,\n",
-    "  extract(month from `dais-hackathon-2025`.mimilabs.cpsc_combined.contract_effective_date) as month,\n",
-    "  count(distinct `dais-hackathon-2025`.mimilabs.snpdata.plan_id) as distinct_plans,\n",
-    "  count( `dais-hackathon-2025`.mimilabs.snpdata.contract_number) as distinct_contracts,\n",
-    "  count( `dais-hackathon-2025`.mimilabs.snpdata.plan_enrollment) as distinct_enrollments\n",
+    "  extract(year from `delta_hack_1`.mimilabs.cpsc_combined.contract_effective_date) as year,\n",
+    "  extract(month from `delta_hack_1`.mimilabs.cpsc_combined.contract_effective_date) as month,\n",
+    "  count(distinct `delta_hack_1`.mimilabs.snpdata.plan_id) as distinct_plans,\n",
+    "  count( `delta_hack_1`.mimilabs.snpdata.contract_number) as distinct_contracts,\n",
+    "  count( `delta_hack_1`.mimilabs.snpdata.plan_enrollment) as distinct_enrollments\n",
     "FROM\n",
-    "  `dais-hackathon-2025`.mimilabs.snpdata\n",
+    "  `delta_hack_1`.mimilabs.snpdata\n",
     "  inner join\n",
-    "  `dais-hackathon-2025`.mimilabs.mapd_plan_directory\n",
+    "  `delta_hack_1`.mimilabs.mapd_plan_directory\n",
     "  on\n",
-    "  `dais-hackathon-2025`.mimilabs.snpdata.plan_type = `dais-hackathon-2025`.mimilabs.mapd_plan_directory.plan_type\n",
+    "  `delta_hack_1`.mimilabs.snpdata.plan_type = `delta_hack_1`.mimilabs.mapd_plan_directory.plan_type\n",
     "AND\n",
-    "  `dais-hackathon-2025`.mimilabs.snpdata.contract_number = `dais-hackathon-2025`.mimilabs.mapd_plan_directory.contract_number\n",
+    "  `delta_hack_1`.mimilabs.snpdata.contract_number = `delta_hack_1`.mimilabs.mapd_plan_directory.contract_number\n",
     "  inner join\n",
-    "  `dais-hackathon-2025`.mimilabs.cpsc_combined\n",
+    "  `delta_hack_1`.mimilabs.cpsc_combined\n",
     "  on\n",
-    "  `dais-hackathon-2025`.mimilabs.snpdata.contract_number = `dais-hackathon-2025`.mimilabs.cpsc_combined.contract_id\n",
+    "  `delta_hack_1`.mimilabs.snpdata.contract_number = `delta_hack_1`.mimilabs.cpsc_combined.contract_id\n",
     "  and\n",
-    "  `dais-hackathon-2025`.mimilabs.snpdata.plan_id = `dais-hackathon-2025`.mimilabs.cpsc_combined.plan_id\n",
+    "  `delta_hack_1`.mimilabs.snpdata.plan_id = `delta_hack_1`.mimilabs.cpsc_combined.plan_id\n",
     "GROUP BY\n",
     "    specialty_diseases,\n",
     "    states,\n",
-    "    legal_entity_city,\n",
     "    year,\n",
     "    month\n",
     "\n",
@@ -94,7 +92,7 @@
     "# === Agent A: ExtractionAgent ===\n",
     "extraction_prompt = PromptTemplate.from_template(\n",
     "  \"\"\"\n",
-    "  You are a helpful healthcare assistant identifying what plans are available in my county. Categorise the speciality diseases into cardio, renal, mental, diabetic. One speciality disease can be mapped to multiple categories. Each speciality disease we map to at least one category. Return for each speciality disease the categories. Return just the list, not an explanation or summary.\n",
+    "  You are a helpful healthcare assistant identifying what plans are available in my county. Categorise the speciality diseases into cardio, renal, mental, diabetic. One speciality disease can be mapped to multiple categories. Each speciality disease we map to at least one category. Return for each speciality disease the categories across states. Return just the list, not an explanation or summary.\n",
     "\n",
     "  Here is the JSON data:\n",
     "  {context}\n",
@@ -102,42 +100,43 @@
     ")\n",
     "\n",
     "extraction_chain = (\n",
-    "    find_info |\n",
-    "    extraction_prompt\n",
+    "    RunnableLambda(lambda _: {\"context\": find_info()})\n",
+    "    | extraction_prompt\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
+    "    | RunnableLambda(lambda extracted: {\"extracted_info\": extracted})\n",
     ")\n",
     "\n",
-    "def get_summary(location: str) -> pd.DataFrame:\n",
+    "def get_summary() -> pd.DataFrame:\n",
     "  query = f\"\"\"\n",
-    "  \n",
+    "  select * from dataupload.default.final_pop_invest\n",
     "  \"\"\"\n",
     "  return format_context(spark.sql(query).toPandas())\n",
     "\n",
     "# === Agent B: SummaryAgent ===\n",
     "summary_prompt = PromptTemplate.from_template(\n",
     "    \"\"\"\n",
-    "    Based on the extracted categories return how many cardio categories we have.\n",
+    "    Extracted Info has a column named state and you have already identified categories across same. The get_summary dataframe has state2 which is a statename. Now you have information about statewise disease categories, invesetments and population. Looking at all this together recommend which states we should invest more and which states we should invest less by co-relating the information. Return just the list, not an explanation or summary. While returning list recommend the increased investment and decreased invesement by ensuring the total sum of investment across states is not changed. \n",
     "\n",
     "    Extracted Info:\n",
     "    {extracted_info}\n",
+    "\n",
+    "    Population Data:\n",
+    "    {pop_data}\n",
     "    \"\"\"\n",
     ")\n",
     "summary_chain = (\n",
-    "    summary_prompt\n",
+    "    RunnableLambda(lambda inputs: {\"extracted_info\": inputs[\"extracted_info\"], \"pop_data\": get_summary()})\n",
+    "    | summary_prompt\n",
     "    | llm\n",
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
     "# === Agentic Chain ===\n",
-    "agentic_chain = (\n",
-    "    extraction_chain \n",
-    "    | summary_chain | (lambda extracted: {\"extracted_info\": extracted}) \n",
-    "    | summary_chain\n",
-    ")\n",
+    "agentic_chain = (extraction_chain | summary_chain)\n",
     "\n",
     "# Run the agentic chain\n",
-    "result = agentic_chain.invoke(\"Autauga\")\n",
+    "result = agentic_chain.invoke({})\n",
     "print(result)"
    ]
   }
