--- a/scratch/hackathon_agent.ipynb
+++ b/scratch/hackathon_agent.ipynb
@@ -116,7 +116,7 @@
     "# === Agent B: SummaryAgent ===\n",
     "summary_prompt = PromptTemplate.from_template(\n",
     "    \"\"\"\n",
-    "    Extracted Info has a column named state and you have already identified categories across same. The get_summary dataframe has state2 which is a statename. Now you have information about statewise disease categories, invesetments and population. Looking at all this together recommend which states we should invest more and which states we should invest less by co-relating the information. Return just the list, not an explanation or summary. \n",
+    "    Extracted Info has a column named state and you have already identified categories across same. The get_summary dataframe has state2 which is a statename. Now you have information about statewise disease categories, invesetments and population. Looking at all this together recommend which states we should invest more and which states we should invest less by co-relating the information. Return just the list. \n",
     "\n",
     "    Extracted Info:\n",
     "    {extracted_info}\n",
